# github_events_aggregator

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
dashboard/: app.py
scripts/: setup_winutils.py
src/github_aggregator/: __init__.py  config.py  downloader.py  spark_job.py  transformations.py
tests/: conftest.py
tests/integration/: test_spark_job.py
tests/unit/: test_downloader.py  test_transformations.py
